--- a/home/style.css
+++ b/home/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=League+Spartan:wght@100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.cdnfonts.com/css/gucina');
+
 
 
 body {
@@ -34,4 +36,29 @@ body {
     color: #ff8800;
     background-color: #d1d1d13d;
     border-radius: 30px;
+}
+
+.title-div {
+    font-family: 'Gucina', sans-serif;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.title {
+    font-size: 70px;
+    text-align: center;
+    color: #fdb35d;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-bottom: 0;
+}
+
+.subtitle {
+    margin-top: 0;
+    font-size: 24px;
+    text-align: center;
+    color: #fdb35d;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    text-decoration: underline;
 }
