--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 
 body {
-    background-image: url(/musicplayer/imgs/wallpaper-01.jpg);
+    background-image: url(/imgs/wallpaper-01.jpg);
 }
 
 .navbar {
