--- a/style.css
+++ b/style.css
@@ -62,3 +62,31 @@ body {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     text-decoration: underline;
 }
+
+.box-container {
+    display: flex;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+
+.box {
+    font-family: 'Nunito', sans-serif;
+    margin-right: 150px;
+    margin-left: 150px;
+    text-align: center;
+    background-color: rgba(61, 59, 59, 0.1);
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
+    padding: 20px;
+    width: 300px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    margin-bottom: 20px;
+    transition: all 0.3s ease-in-out;
+}
+
+.box:hover {
+    transform: scale(1.05);
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 54px 55px, rgba(0, 0, 0, 0.15) 0px -12px 30px, rgba(0, 0, 0, 0.15) 0px 4px 6px, rgba(0, 0, 0, 0.2) 0px 12px 13px, rgba(0, 0, 0, 0.1) 0px -3px 5px;
+}
