--- a/style.css
+++ b/style.css
@@ -73,8 +73,6 @@ body {
 
 .box {
     font-family: 'Nunito', sans-serif;
-    margin-right: 150px;
-    margin-left: 150px;
     text-align: center;
     background-color: rgba(61, 59, 59, 0.1);
     backdrop-filter: blur(10px);
@@ -89,4 +87,15 @@ body {
 .box:hover {
     transform: scale(1.05);
     box-shadow: rgba(0, 0, 0, 0.3) 0px 54px 55px, rgba(0, 0, 0, 0.15) 0px -12px 30px, rgba(0, 0, 0, 0.15) 0px 4px 6px, rgba(0, 0, 0, 0.2) 0px 12px 13px, rgba(0, 0, 0, 0.1) 0px -3px 5px;
+}
+
+.line {   
+    border-radius: 30px;
+    width: 100px;
+    height: 10px;
+    background: #ffffff41;
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+    margin-left: 40px;
+    margin-right: 40px;
 }
