--- a/style.css
+++ b/style.css
@@ -98,4 +98,11 @@ body {
     backdrop-filter: blur(8px);
     margin-left: 40px;
     margin-right: 40px;
+    transition: all 0.3s ease-in-out;
+}
+
+.line:hover {
+-webkit-box-shadow:0px 0px 10px 0px rgba(235,235,235,0.9);
+-moz-box-shadow: 0px 0px 10px 0px rgba(235,235,235,0.9);
+box-shadow: 0px 0px 10px 0px rgba(235,235,235,0.9);
 }
